Fix: Remove 70px padding-top from .App causing gap above header

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,6 @@
   max-width: none;
 }
 
-/* Add padding to account for fixed navbar */
 .App {
-  padding-top: 70px;
-}
-
-/* Menu page shouldn't have the padding since it has its own hero */
-.menu-page {
-  margin-top: 0;
+  padding-top: 0;
 }
